socialnetwork/config/gateway.yaml
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

static_resources:
  listeners:
  - name: listener_http
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager"
          codec_type: AUTO
          stat_prefix: gateway
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/microless.socialnetwork.composepost.ComposePostService"
                route:
                  cluster: composepost
                  timeout: 0s
              - match:
                  prefix: "/microless.socialnetwork.hometimeline.HomeTimelineService"
                route:
                  cluster: hometimeline
                  timeout: 0s
              - match:
                  prefix: "/microless.socialnetwork.socialgraph.SocialGraphService"
                route:
                  cluster: socialgraph
                  timeout: 0s
              - match:
                  prefix: "/microless.socialnetwork.user.UserService"
                route:
                  cluster: user
                  timeout: 0s
              - match:
                  prefix: "/microless.socialnetwork.usertimeline.UserTimelineService"
                route:
                  cluster: usertimeline
                  timeout: 0s
          http_filters:
          - name: envoy.filters.http.grpc_json_transcoder
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_json_transcoder.v3.GrpcJsonTranscoder
              proto_descriptor: "/descriptor/all.desc"
              services:
              - "microless.socialnetwork.composepost.ComposePostService"
              - "microless.socialnetwork.hometimeline.HomeTimelineService"
              - "microless.socialnetwork.socialgraph.SocialGraphService"
              - "microless.socialnetwork.user.UserService"
              - "microless.socialnetwork.usertimeline.UserTimelineService"
              print_options:
                add_whitespace: true
                always_print_primitive_fields: true
                always_print_enums_as_ints: false
                preserve_proto_field_names: false
          - name: envoy.filters.http.router
            typed_config:
              "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"
  clusters:
  - name: composepost
    type: LOGICAL_DNS
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicit_http_config:
          http2_protocol_options: {}
    load_assignment:
      cluster_name: composepost
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: compose-post
                port_value: 8080
  - name: hometimeline
    type: LOGICAL_DNS
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicit_http_config:
          http2_protocol_options: {}
    load_assignment:
      cluster_name: hometimeline
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: home-timeline
                port_value: 8080
  - name: socialgraph
    type: LOGICAL_DNS
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicit_http_config:
          http2_protocol_options: {}
    load_assignment:
      cluster_name: socialgraph
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: social-graph
                port_value: 8080
  - name: user
    type: LOGICAL_DNS
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicit_http_config:
          http2_protocol_options: {}
    load_assignment:
      cluster_name: user
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: user
                port_value: 8080
  - name: usertimeline
    type: LOGICAL_DNS
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicit_http_config:
          http2_protocol_options: {}
    load_assignment:
      cluster_name: usertimeline
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: user-timeline
                port_value: 8080
